--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,6 +29,8 @@ jobs:
           
           - name: Commit and push changes
             run: |
-              git add Tests/OPT-WSNOC-1.robot
-              git commit -m "Linting and formatting changes"
-              git push
+               git config --global user.email "husanghost@gmail.com"
+               git config --global user.name "HusanboyUs"
+               git add Tests/OPT-WSNOC-1.robot
+               git commit -m "Linting and formatting changes"
+               git push
